--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 
 <body>
   <header>
-    <div id="navbar">
-      <img class="logo" src="/images/logo.png" alt="Logo">
-      <h1>Burger</h1>
-    </div>
+    <div class="logo"> <a href="#"><img src="/images/logo.png" alt="Logo"></a></div>
+    <h1>Burger</h1>
+    <nav>
+      <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#services">Offers</a></li>
+        <li> <a href="#contact">Contact</a></li>
+        <li> <a href="#about">About</a></li>
+      </ul>
+    </nav>
   </header>
   <footer></footer>
 </body>
