--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
+  <script src="https://kit.fontawesome.com/25572135fd.js" crossorigin="anonymous"></script>
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <title>Burgerpalace</title>
 </head>
 
 <body>
   <header>
-    <div class="logo"> <a href="#"><img src="/images/logo.png" alt="Logo"></a></div>
-    <h1>Burger</h1>
+    <div class="logo">
+      <a href="#"><img src="/images/logo.png" alt="Logo"></a>
+      <h1>Burger</h1>
+    </div>
+
     <nav>
       <ul>
         <li><a class="active" href="#home">Home</a></li>
@@ -22,7 +27,16 @@
       </ul>
     </nav>
   </header>
-  <footer></footer>
+  <div class="footer">
+  <span id="copyright">Copyright 2021. All rights reserved.</span>
+    <div class="social">
+    <a class="fa fa-facebook-square"></a>
+    <a class="fa fa-youtube"></a>
+    <a class="fa fa-twitter"></a> 
+    <a class="fa fa-instagram"></a>
+    <a class="fa fa-linkedin-square"></a>
+  </div>
+    <span id="designed">Designed by Lyons Albert</span>
+  </div>
 </body>
-
 </html>
