--- a/index.html
+++ b/index.html
@@ -27,16 +27,57 @@
       </ul>
     </nav>
   </header>
-  <div class="footer">
-  <span id="copyright">Copyright 2021. All rights reserved.</span>
-    <div class="social">
-    <a class="fa fa-facebook-square"></a>
-    <a class="fa fa-youtube"></a>
-    <a class="fa fa-twitter"></a> 
-    <a class="fa fa-instagram"></a>
-    <a class="fa fa-linkedin-square"></a>
+  <!-- Home -->
+  <div id="home">
+    <div class="row">
+      <div class="column-left">
+        <h1 class="rain">Rain or shine, <br> its time to dine.</h1>
+        <p><span id="cook">We cook & deliver the tastiest burgers <br>right away to your designated location</p>
+        <button class="button">Order Now </button>
+      </div>
+      <div class="column-right">
+        <img class="imghome" src="/images/CITYPNG 1.png" width="335" height="471">
+      </div>
+    </div>
   </div>
+    <!-- Home -->
+    <div id="home">
+      <div class="row">
+        <div class="column-left">
+          <h1 class="rain">Rain or shine, <br> its time to dine.</h1>
+          <p><span id="cook">We cook & deliver the tastiest burgers <br>right away to your designated location</p>
+          <button class="button">Order Now </button>
+        </div>
+        <div class="column-right">
+          <img class="imghome" src="/images/CITYPNG 1.png" width="335" height="471">
+        </div>
+      </div>
+    </div>
+      <!-- Home -->
+  <div id="home">
+    <div class="row">
+      <div class="column-left">
+        <h1 class="rain">Rain or shine, <br> its time to dine.</h1>
+        <p><span id="cook">We cook & deliver the tastiest burgers <br>right away to your designated location</p>
+        <button class="button">Order Now </button>
+      </div>
+      <div class="column-right">
+        <img class="imghome" src="/images/CITYPNG 1.png">
+      </div>
+    </div>
+  </div>
+  
+  <div class="footer">
+    <span id="copyright">Copyright 2021. All rights reserved.</span>
+    <div class="social">
+      <a class="fa fa-facebook-square"></a>
+      <a class="fa fa-youtube"></a>
+      <a class="fa fa-twitter"></a>
+      <a class="fa fa-instagram"></a>
+      <a class="fa fa-linkedin-square"></a>
+    </div>
     <span id="designed">Designed by Lyons Albert</span>
   </div>
 </body>
+
 </html>
