--- a/index.html
+++ b/index.html
@@ -38,7 +38,37 @@
       <img class="imghome" src="/images/CITYPNG 1.png">
     </div>
   </div>
-
+  <!--services-->
+  <div id="services">
+    <div id="column">
+      <div class="card">
+        <div class="container">
+          <h1>Quality Burgers</h1>
+          <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
+            morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare</P>
+        </div>
+      </div>
+    </div>
+    <div id="column">
+      <div class="card">
+        <div class="container">
+          <h1>Fast Delivery</h1>
+          <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
+            morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare<br>suspendise.Eget at tincidunt<br>
+          neque sapien enim tristique eu</P>
+        </div>
+      </div>
+    </div>
+    <div id="column">
+      <div class="card">
+        <div class="container">
+          <h1>Delicious Meals</h1>
+          <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
+            morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare</P>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <span id="copyright">Copyright 2021. All rights reserved.</span>
     <div class="social">
