added the services section

--- a/index.html
+++ b/index.html
@@ -38,37 +38,39 @@
       <img class="imghome" src="/images/CITYPNG 1.png">
     </div>
   </div>
+
   <!--services-->
-  <div id="services">
-    <div id="column">
-      <div class="card">
-        <div class="container">
-          <h1>Quality Burgers</h1>
-          <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
-            morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare</P>
-        </div>
+  <div class="services">
+    <div class="column">
+      <img class="bell" src="images/bell.svg" alt="service bell">
+      <div class="container">
+        <h1>Quality Burgers</h1>
+        <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
+          morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare</P>
       </div>
     </div>
-    <div id="column">
-      <div class="card">
-        <div class="container">
-          <h1>Fast Delivery</h1>
-          <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
-            morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare<br>suspendise.Eget at tincidunt<br>
+
+    <div class="column">
+      <img class="truck" src="/images/delivery.svg" alt="Fast delivery">
+      <div class="container">
+        <h1>Fast Delivery</h1>
+        <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
+          morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare<br>suspendise.Eget at tincidunt<br>
           neque sapien enim tristique eu</P>
-        </div>
       </div>
     </div>
-    <div id="column">
-      <div class="card">
-        <div class="container">
-          <h1>Delicious Meals</h1>
-          <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
-            morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare</P>
-        </div>
+
+    <div class="column">
+      <img class="food" src="/images/food.svg" alt="drink and burger">
+      <div class="container">
+        <h1>Delicious Meals</h1>
+        <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
+          morbi viverra bibendum in sit.Ac<br>semper arcu facilisis ornare</P>
       </div>
     </div>
   </div>
+
+  <!--Footer-->
   <div class="footer">
     <span id="copyright">Copyright 2021. All rights reserved.</span>
     <div class="social">
