updated the services section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!--services-->
   <div class="services">
-    <div class="column">
+    <div class="column edge">
       <img class="bell" src="images/bell.svg" alt="service bell">
       <div class="container">
         <h1>Quality Burgers</h1>
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <div class="column">
+    <div class="column middle">
       <img class="truck" src="/images/delivery.svg" alt="Fast delivery">
       <div class="container">
         <h1>Fast Delivery</h1>
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <div class="column">
+    <div class="column edge">
       <img class="food" src="/images/food.svg" alt="drink and burger">
       <div class="container">
         <h1>Delicious Meals</h1>
