added the offers section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#services">Offers</a></li>
+        <li><a href="#offers">Offers</a></li>
         <li> <a href="#contact">Contact</a></li>
         <li> <a href="#about">About</a></li>
       </ul>
@@ -70,18 +70,94 @@
     </div>
   </div>
 
-  <!--Footer-->
-  <div class="footer">
-    <span id="copyright">Copyright 2021. All rights reserved.</span>
-    <div class="social">
-      <a class="fab fa-facebook"></a>
-      <a class="fa fa-youtube"></a>
-      <a class="fa fa-twitter"></a>
-      <a class="fa fa-instagram"></a>
-      <a class="fa fa-linkedin-square"></a>
+  <!--offers-->
+  <span id="ourmenu"><h1 class="our"><b>Our</b></h1>
+  <h1 class="menu">Menu</h1></span>
+  <br>
+  <div class="row offers">
+    <div class="column">
+      <div class="card">
+        <img src="images/SeekPng 2.png" alt="Doubleburger" style="width:100%">
+        <div class="container">
+          <h1>DOUBLE BURGER</h1>
+          <p>Lorem ipsum dolor sit amet con<br>sectetur adipisicing elit. Erat ma<br>rbi viverra bibendum in sit. Ac semper<br>arcu facilisis ornare</p>
+          <h2>Ksh 200</h2>
+          <a class="fa fa-shopping-cart cart"></a>
+        </div>
+      </div>
     </div>
-    <span id="designed">Designed by Lyons Albert</span>
-  </div>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="images/SeekPng 1.png" alt="Doubleburger" style="width:100%">
+          <div class="container">
+            <h1>DOUBLE BURGER</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
+            <h2>Ksh 200</h2>
+            <a class="fa fa-shopping-cart cart"></a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="images/SeekPng 3.png" alt="Doubleburger" style="width:100%">
+            <div class="container">
+              <h1>DOUBLE BURGER</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
+              <h2>Ksh 200</h2>
+              <a class="fa fa-shopping-cart cart"></a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <img src="images/SeekPng 4.png" alt="Doubleburger" style="width:100%">
+              <div class="container">
+                <h1>DOUBLE BURGER</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
+                <h2>Ksh 200</h2>
+                <a class="fa fa-shopping-cart cart"></a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="images/SeekPng 5.png" alt="Doubleburger" style="width:100%">
+                <div class="container">
+                  <h1>DOUBLE BURGER</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
+                  <h2>Ksh 200</h2>
+                  <a class="fa fa-shopping-cart cart"></a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="column">
+                <div class="card">
+                  <img src="images/SeekPng 6.png" alt="Doubleburger" style="width:100%">
+                  <div class="container">
+                    <h1>DOUBLE BURGER</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
+                    <h2>Ksh 200</h2>
+                    <a class="fa fa-shopping-cart cart"></a>
+                  </div>
+                </div>
+              </div>
+              <!--Footer-->
+              <div class="footer">
+                <span id="copyright">Copyright 2021. All rights reserved.</span>
+                <div class="social">
+                  <a class="fab fa-facebook"></a>
+                  <a class="fa fa-youtube"></a>
+                  <a class="fa fa-twitter"></a>
+                  <a class="fa fa-instagram"></a>
+                  <a class="fa fa-linkedin-square"></a>
+                </div>
+                <span id="designed">Designed by Lyons Albert</span>
+              </div>
 </body>
 
 </html>
