added the slideshow section

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
   </div>
 
   <!--offers-->
-  <span id="ourmenu"><h1 class="our"><b>Our</b></h1>
-  <h1 class="menu">Menu</h1></span>
+  <span id="ourmenu">
+    <h1 class="our"><b>Our</b></h1>
+    <h1 class="menu">Menu</h1>
+  </span>
   <br>
   <div class="row offers">
     <div class="column">
@@ -80,8 +82,9 @@
         <img src="images/SeekPng 2.png" alt="Doubleburger" style="width:100%">
         <div class="container">
           <h1>DOUBLE BURGER</h1>
-          <p>Lorem ipsum dolor sit amet con<br>sectetur adipisicing elit. Erat ma<br>rbi viverra bibendum in sit. Ac semper<br>arcu facilisis ornare</p>
-          <h2>Ksh 200</h2>
+          <p>Lorem ipsum dolor sit amet con<br>sectetur adipisicing elit. Erat ma<br>rbi viverra bibendum in sit. Ac
+            semper<br>arcu facilisis ornare</p>
+          <p class="cash"> Ksh 200</p>
           <a class="fa fa-shopping-cart cart"></a>
         </div>
       </div>
@@ -92,8 +95,9 @@
           <img src="images/SeekPng 1.png" alt="Doubleburger" style="width:100%">
           <div class="container">
             <h1>DOUBLE BURGER</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
-            <h2>Ksh 200</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit,
+              omnis nam excepturi non sit qua</p>
+            <p class="cash"> Ksh 200</p>
             <a class="fa fa-shopping-cart cart"></a>
           </div>
         </div>
@@ -104,8 +108,9 @@
             <img src="images/SeekPng 3.png" alt="Doubleburger" style="width:100%">
             <div class="container">
               <h1>DOUBLE BURGER</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
-              <h2>Ksh 200</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus,
+                odit, omnis nam excepturi non sit qua</p>
+              <p class="cash"> Ksh 200</p>
               <a class="fa fa-shopping-cart cart"></a>
             </div>
           </div>
@@ -116,8 +121,9 @@
               <img src="images/SeekPng 4.png" alt="Doubleburger" style="width:100%">
               <div class="container">
                 <h1>DOUBLE BURGER</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
-                <h2>Ksh 200</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus,
+                  odit, omnis nam excepturi non sit qua</p>
+                <p class="cash"> Ksh 200</p>
                 <a class="fa fa-shopping-cart cart"></a>
               </div>
             </div>
@@ -128,8 +134,9 @@
                 <img src="images/SeekPng 5.png" alt="Doubleburger" style="width:100%">
                 <div class="container">
                   <h1>DOUBLE BURGER</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
-                  <h2>Ksh 200</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus,
+                    odit, omnis nam excepturi non sit qua</p>
+                  <p class="cash"> Ksh 200</p>
                   <a class="fa fa-shopping-cart cart"></a>
                 </div>
               </div>
@@ -140,9 +147,24 @@
                   <img src="images/SeekPng 6.png" alt="Doubleburger" style="width:100%">
                   <div class="container">
                     <h1>DOUBLE BURGER</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem voluptatibus, odit, omnis nam excepturi non sit qua</p>
-                    <h2>Ksh 200</h2>
-                    <a class="fa fa-shopping-cart cart"></a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nobis inventore rem
+                      voluptatibus, odit, omnis nam excepturi non sit qua</p>
+                    <p class="cash"> Ksh 200</p> <a class="fa fa-shopping-cart cart"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <!--Doubledecker-->
+              <div class="container2">
+                <div class="row">
+                  <div class="column-lefts">
+                    <span class="spanname"><p class="doubletext">The Double</p>
+                    <p class="deckertext">Decker</p>
+                    <p class="taste">Taste the explosion in your mouth</p></span>
+                    </div>
+                  <div class="column-rights">
+                    <img class="dcheck1" src="images/double-check1.png" style="width:40%">
+                    <img class="dcheck2" src="images/double-check2.png" style="width:40%">
                   </div>
                 </div>
               </div>
