added the sitemap section

--- a/index.html
+++ b/index.html
@@ -178,8 +178,23 @@
                   <button><i class="fa fa-play-store"></i></button>
                 </div>
                 <div class="column-righ">
-                  <img class="pic" src="images/phone.jpeg" style="width:100%">
+                  <img class="pic" src="images/phone.jpeg">
                 </div>
+              </div>
+            </div>
+            <!--sitemap-->
+            <div class="row site">
+              <div class="column-1">
+                <div class="logo1">
+                  <a href="#"><img src="/images/logo.png" alt="Logo"></a>
+                  <h1>Burger</h1>
+                </div>
+              </div>
+              <div class="column-2">
+                <h2>Sitemap</h2>
+              </div>
+              <div class="column-3">
+                <h2>Subscribe to our newsletter</h2>
               </div>
             </div>
             <!--Footer-->
