added sub to newsletter section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                 </div>
               </div>
             </div>
+          </div>
             <!--Doubledecker-->
             <div class="container2">
               <div class="row">
@@ -195,7 +196,9 @@
               </div>
               <div class="column-3">
                 <h2>Subscribe to our newsletter</h2>
-              </div>
+                     <input type="text" placeholder="Enter your email" name="mail" required>
+                      <input type="submit" value="Subscribe">
+                 </div>
             </div>
             <!--Footer-->
             <div class="footer">
