--- a/index.html
+++ b/index.html
@@ -155,63 +155,67 @@
               </div>
             </div>
           </div>
-            <!--Doubledecker-->
-            <div class="container2">
-              <div class="row">
-                <div class="column-lefts">
-                  <span class="spanname">
-                    <p class="doubletext">The Double</p>
-                    <p class="deckertext">Decker</p>
-                    <p class="taste">Taste the explosion in your mouth</p>
-                  </span>
-                </div>
-                <div class="column-rights">
-                  <img class="dcheck1" src="images/double-check1.png" style="width:40%">
-                  <img class="dcheck2" src="images/double-check2.png" style="width:40%">
-                </div>
+          <!--Doubledecker-->
+          <div class="container2">
+            <div class="row">
+              <div class="column-lefts">
+                <span class="spanname">
+                  <p class="doubletext">The Double</p>
+                  <p class="deckertext">Decker</p>
+                  <p class="taste">Taste the explosion in your mouth</p>
+                </span>
+              </div>
+              <div class="column-rights">
+                <img class="dcheck1" src="images/double-check1.png" style="width:40%">
+                <img class="dcheck2" src="images/double-check2.png" style="width:40%">
               </div>
             </div>
-            <!--discover our apps-->
-            <div class="container2 down">
-              <div class="row">
-                <div class="column-lef">
-                  <p class="download">Discover even more<br>with our mobile<br>apps</p>
-                  <button><i class="fa fa-play-store"></i></button>
-                </div>
-                <div class="column-righ">
-                  <img class="pic" src="images/phone.jpeg">
-                </div>
+          </div>
+          <!--discover our apps-->
+          <div class="container2 down">
+            <div class="row">
+              <div class="column-lef">
+                <p class="download">Discover even more<br>with our mobile<br>apps</p>
+                <button><i class="fa fa-play-store"></i></button>
+              </div>
+              <div class="column-righ">
+                <img class="pic" src="images/phone.jpeg">
               </div>
             </div>
-            <!--sitemap-->
-            <div class="row site">
-              <div class="column-1">
-                <div class="logo1">
-                  <a href="#"><img src="/images/logo.png" alt="Logo"></a>
-                  <h1>Burger</h1>
-                </div>
+          </div>
+          <!--sitemap-->
+          <div class="row site">
+            <div class="column-1">
+              <div class="logo1">
+                <a href="#"><img src="/images/logo.png" alt="Logo"></a>
+                <h1>Burger</h1>
               </div>
-              <div class="column-2">
-                <h2>Sitemap</h2>
-              </div>
-              <div class="column-3">
-                <h2>Subscribe to our newsletter</h2>
-                     <input type="text" placeholder="Enter your email" name="mail" required>
-                      <input type="submit" value="Subscribe">
-                 </div>
             </div>
-            <!--Footer-->
-            <div class="footer">
-              <span id="copyright">Copyright 2021. All rights reserved.</span>
-              <div class="social">
-                <a class="fab fa-facebook"></a>
-                <a class="fa fa-youtube"></a>
-                <a class="fa fa-twitter"></a>
-                <a class="fa fa-instagram"></a>
-                <a class="fa fa-linkedin-square"></a>
-              </div>
-              <span id="designed">Designed by Lyons Albert</span>
+            <div class="column-2">
+              <h2>Sitemap</h2> 
+              <p>Home</p>
+              <p>Services</p>
+              <p>About</p>
+              <p>Contact</p>
             </div>
+            <div class="column-3">
+              <h2>Subscribe to our newsletter</h2>
+              <input type="text" placeholder="Enter your email" name="mail" required>
+              <input type="submit" value="Subscribe">
+            </div>
+          </div>
+          <!--Footer-->
+          <div class="footer">
+            <span id="copyright">Copyright 2021. All rights reserved.</span>
+            <div class="social">
+              <a class="fab fa-facebook"></a>
+              <a class="fa fa-youtube"></a>
+              <a class="fa fa-twitter"></a>
+              <a class="fa fa-instagram"></a>
+              <a class="fa fa-linkedin-square"></a>
+            </div>
+            <span id="designed">Designed by Lyons Albert</span>
+          </div>
 </body>
 
 </html>
