--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <li><a href="#offers">Offers</a></li>
         <li> <a href="#contact">Contact</a></li>
         <li> <a href="#about">About</a></li>
+        <li><a class="fas fa-shopping-basket"></a></li>
       </ul>
     </nav>
-  </header>
+      </header>
   <!-- Home -->
   <div id="home">
     <div class="column-left">
