added more customization the site

--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
                   <p class="deckertext">Decker</p>
                   <p class="taste">Taste the explosion in your mouth</p>
                 </span>
+                <div style="text-align:center">
+                  <span class="dot-1"></span>
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                </div>
               </div>
               <div class="column-rights">
                 <img class="dcheck1" src="images/double-check1.png" style="width:40%">
