added more customization the site

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
             <div class="row">
               <div class="column-lef">
                 <p class="download">Discover even more<br>with our mobile<br>apps</p>
-                <button><i class="fa fa-play-store"></i></button>
+                <span class="but"><img class="play" src="/images/play.svg" alt="" style=width:30%>
+                <img src="/images/play.svg" alt="" style=width:30%></span>
               </div>
               <div class="column-righ">
                 <img class="pic" src="images/phone.jpeg">
