added more customization the site

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="column-lef">
                 <p class="download">Discover even more<br>with our mobile<br>apps</p>
                 <span class="but"><img class="play" src="/images/play.svg" alt="" style=width:30%>
-                <img src="/images/play.svg" alt="" style=width:30%></span>
+                <img" src="/images/play.svg" alt="" style=width:30%></span>
               </div>
               <div class="column-righ">
                 <img class="pic" src="images/phone.jpeg">
