--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <title>Burgerpalace</title>
 </head>
-
 <body>
-  <header>
+    <div>
+      <header>
     <div class="logo">
       <a href="#"><img src="/images/logo.png" alt="Logo"></a>
       <h1>Burger</h1>
@@ -37,8 +37,7 @@
     <div class="column-right">
       <img class="imghome" src="/images/CITYPNG 1.png">
     </div>
-  </div>
-
+  </div></div>
   <!--services-->
   <div class="services">
     <div class="column edge">
