added more customization the site

--- a/index.html
+++ b/index.html
@@ -10,34 +10,36 @@
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <title>Burgerpalace</title>
 </head>
+
 <body>
-    <div>
-      <header>
-    <div class="logo">
-      <a href="#"><img src="/images/logo.png" alt="Logo"></a>
-      <h1>Burger</h1>
+  <div>
+    <header>
+      <div class="logo">
+        <a href="#"><img src="/images/logo.png" alt="Logo"></a>
+        <h1>Burger</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a class="active" href="#home">Home</a></li>
+          <li><a href="#offers">Offers</a></li>
+          <li> <a href="#contact">Contact</a></li>
+          <li> <a href="#about">About</a></li>
+          <li><a class="fas fa-shopping-basket"></a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Home -->
+    <div id="home">
+      <div class="column-left">
+        <h1 class="rain">Rain or shine, <br> its time to dine.</h1>
+        <p><span id="cook">We cook & deliver the tastiest burgers <br>right away to your designated location</p>
+        <button class="button">Order Now </button>
+      </div>
+      <div class="column-right">
+        <img class="imghome" src="/images/CITYPNG 1.png">
+      </div>
     </div>
-    <nav>
-      <ul>
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#offers">Offers</a></li>
-        <li> <a href="#contact">Contact</a></li>
-        <li> <a href="#about">About</a></li>
-        <li><a class="fas fa-shopping-basket"></a></li>
-      </ul>
-    </nav>
-      </header>
-  <!-- Home -->
-  <div id="home">
-    <div class="column-left">
-      <h1 class="rain">Rain or shine, <br> its time to dine.</h1>
-      <p><span id="cook">We cook & deliver the tastiest burgers <br>right away to your designated location</p>
-      <button class="button">Order Now </button>
-    </div>
-    <div class="column-right">
-      <img class="imghome" src="/images/CITYPNG 1.png">
-    </div>
-  </div></div>
+  </div>
   <!--services-->
   <div class="services">
     <div class="column edge">
@@ -181,7 +183,8 @@
               <div class="column-lef">
                 <p class="download">Discover even more<br>with our mobile<br>apps</p>
                 <span class="but"><img class="play" src="/images/play.svg" alt="" style=width:30%>
-                <img" src="/images/play.svg" alt="" style=width:30%></span>
+                  <img" src="/images/play.svg" alt="" style=width:30%>
+                </span>
               </div>
               <div class="column-righ">
                 <img class="pic" src="images/phone.jpeg">
@@ -197,7 +200,7 @@
               </div>
             </div>
             <div class="column-2">
-              <h2>Sitemap</h2> 
+              <h2>Sitemap</h2>
               <p>Home</p>
               <p>Services</p>
               <p>About</p>
