added more customization the site

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div>
     <header>
       <div class="logo">
-        <a href="#"><img src="/images/logo.png" alt="Logo"></a>
+        <a href="#"><img src="images/logo.png" alt="Logo"></a>
         <h1>Burger</h1>
       </div>
       <nav>
@@ -36,7 +36,7 @@
         <button class="button">Order Now </button>
       </div>
       <div class="column-right">
-        <img class="imghome" src="/images/CITYPNG 1.png">
+        <img class="imghome" src="images/CITYPNG 1.png">
       </div>
     </div>
   </div>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="column middle">
-      <img class="truck" src="/images/delivery.svg" alt="Fast delivery">
+      <img class="truck" src="images/delivery.svg" alt="Fast delivery">
       <div class="container">
         <h1>Fast Delivery</h1>
         <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="column edge">
-      <img class="food" src="/images/food.svg" alt="drink and burger">
+      <img class="food" src="images/food.svg" alt="drink and burger">
       <div class="container">
         <h1>Delicious Meals</h1>
         <P>Lorem ipsum dolor sit amet,<br>consectetur adipisicing elit. Erat <br>
@@ -182,7 +182,7 @@
             <div class="row">
               <div class="column-lef">
                 <p class="download">Discover even more<br>with our mobile<br>apps</p>
-                <span class="but"><img class="play" src="/images/play.svg" alt="" style=width:30%>
+                <span class="but"><img class="play" src="images/play.svg" alt="" style=width:30%>
                   <img" src="/images/play.svg" alt="" style=width:30%>
                 </span>
               </div>
@@ -195,7 +195,7 @@
           <div class="row site">
             <div class="column-1">
               <div class="logo1">
-                <a href="#"><img src="/images/logo.png" alt="Logo"></a>
+                <a href="#"><img src="images/logo.png" alt="Logo"></a>
                 <h1>Burger</h1>
               </div>
             </div>
